--- a/index.html
+++ b/index.html
@@ -232,6 +232,14 @@ label{
   0%,100%{transform:scale(1)}
   50%{transform:scale(1.05)}
 }
+.shake{
+  animation:shake 0.5s ease-in-out;
+}
+@keyframes shake{
+  0%,100%{transform:translateX(0)}
+  25%{transform:translateX(-10px)}
+  75%{transform:translateX(10px)}
+}
 .overlay{
   position:fixed;
   inset:0;
@@ -314,11 +322,23 @@ label{
   background-clip:text;
   letter-spacing:-1px;
   text-shadow:0 0 60px rgba(239,68,68,.4);
-  animation:pulse 2s ease-in-out infinite;
+  animation:pulseText 2s ease-in-out infinite;
 }
-@keyframes pulse{
-  0%,100%{opacity:1}
-  50%{opacity:.8}
+@keyframes pulseText{
+  0%,100%{opacity:1;transform:scale(1)}
+  50%{opacity:.85;transform:scale(1.02)}
+}
+.confetti{
+  position:fixed;
+  width:10px;
+  height:10px;
+  background:var(--accent);
+  position:absolute;
+  animation:confettiFall 3s ease-out forwards;
+  pointer-events:none;
+}
+@keyframes confettiFall{
+  to{transform:translateY(100vh) rotate(360deg);opacity:0}
 }
 .final-word{
   font-size:clamp(36px,8vw,48px);
@@ -347,7 +367,13 @@ label{
     <p class="subtitle">Find the imposters among you</p>
     <div class="card">
       <button id="startBtn">Start Game</button>
+      <p style="margin-top:20px;font-size:14px;color:var(--text-muted);line-height:1.6">
+        A social deduction game where players must identify the imposters who don't know the secret word.
+      </p>
     </div>
+    <p style="margin-top:16px;font-size:13px;color:var(--text-muted)">
+      550+ words • 7 categories • Fully customizable
+    </p>
   </div>
 </div>
 <!-- SETUP -->
@@ -710,20 +736,38 @@ const categoryNames={
   entertainment:"Entertainment",
   professions:"Professions"
 };
-let names=[],roles=[],current,currentCategory,viewed=0,imposterNames=[];
+let names=[],roles=[],current,currentCategory,viewed=0,imposterNames=[],totalPlayers=0;
 const audioContext=new (window.AudioContext||window.webkitAudioContext)();
 function playSound(frequency,duration,type='sine'){
-  if(!document.getElementById("soundEffects").checked) return;
-  const osc=audioContext.createOscillator();
-  const gain=audioContext.createGain();
-  osc.connect(gain);
-  gain.connect(audioContext.destination);
-  osc.frequency.value=frequency;
-  osc.type=type;
-  gain.gain.setValueAtTime(0.1,audioContext.currentTime);
-  gain.gain.exponentialRampToValueAtTime(0.01,audioContext.currentTime+duration);
-  osc.start(audioContext.currentTime);
-  osc.stop(audioContext.currentTime+duration);
+  if(!document.getElementById("soundEffects")?.checked) return;
+  try{
+    const osc=audioContext.createOscillator();
+    const gain=audioContext.createGain();
+    osc.connect(gain);
+    gain.connect(audioContext.destination);
+    osc.frequency.value=frequency;
+    osc.type=type;
+    gain.gain.setValueAtTime(0.1,audioContext.currentTime);
+    gain.gain.exponentialRampToValueAtTime(0.01,audioContext.currentTime+duration);
+    osc.start(audioContext.currentTime);
+    osc.stop(audioContext.currentTime+duration);
+  }catch(e){}
+}
+function createConfetti(){
+  const colors=['#6366f1','#a855f7','#ec4899','#f59e0b','#10b981','#06b6d4'];
+  for(let i=0;i<50;i++){
+    setTimeout(()=>{
+      const confetti=document.createElement('div');
+      confetti.className='confetti';
+      confetti.style.left=Math.random()*100+'%';
+      confetti.style.top='-10px';
+      confetti.style.background=colors[Math.floor(Math.random()*colors.length)];
+      confetti.style.animationDelay=Math.random()*0.5+'s';
+      confetti.style.animationDuration=(2+Math.random()*2)+'s';
+      document.body.appendChild(confetti);
+      setTimeout(()=>confetti.remove(),5000);
+    },i*30);
+  }
 }
 const show=s=>{
   [menu,setup,game].forEach(x=>x.classList.remove("active"));
