--- a/index.html
+++ b/index.html
@@ -476,15 +476,9 @@ label{
       <h3>First Speaker</h3>
       <h2 id="speaker"></h2>
     </div>
-    <div style="margin-bottom:16px;padding:16px;background:var(--card);border-radius:16px;border:1px solid var(--border)">
-      <div style="display:flex;justify-content:space-between;align-items:center;margin-bottom:8px">
-        <p style="font-size:14px;color:var(--text-muted)">Progress</p>
-        <p style="font-size:16px;font-weight:700"><span id="progressText">0/0</span></p>
-      </div>
-      <div style="height:8px;background:var(--card-light);border-radius:8px;overflow:hidden">
-        <div id="progressBar" style="height:100%;background:linear-gradient(90deg,var(--accent),#a855f7);width:0%;transition:width .3s ease"></div>
-      </div>
-      <div style="margin-top:12px;display:flex;gap:8px;flex-wrap:wrap" id="playerBadges"></div>
+    <div style="margin-bottom:20px;padding:16px;background:var(--card);border-radius:16px;border:1px solid var(--border)">
+      <p style="font-size:14px;color:var(--text-muted);margin-bottom:12px">Who has checked their role?</p>
+      <div style="display:flex;gap:8px;flex-wrap:wrap" id="playerBadges"></div>
     </div>
     <div id="grid" class="grid"></div>
     <div style="margin-top:20px;display:flex;gap:12px;justify-content:center;flex-wrap:wrap">
@@ -513,10 +507,6 @@ label{
       <p style="font-size:18px;font-weight:600;margin-bottom:8px">Category: <span id="finalCategory"></span></p>
       <p style="font-size:16px;color:var(--text-muted)">Hint: "<span id="finalHint"></span>"</p>
       <p style="font-size:14px;color:var(--text-muted);margin-top:12px" id="finalStats"></p>
-    </div>
-    <div style="margin-top:24px;padding:16px;background:var(--card-light);border-radius:16px;border:1px solid var(--border)">
-      <p style="font-size:13px;color:var(--text-muted);margin-bottom:8px">💡 Pro Tip</p>
-      <p id="proTip" style="font-size:14px;line-height:1.6"></p>
     </div>
     <button id="nextRound">Play Again</button>
     <button id="menuBtn" class="secondary">Main Menu</button>
