--- a/index.html
+++ b/index.html
@@ -476,10 +476,6 @@ label{
       <h3>First Speaker</h3>
       <h2 id="speaker"></h2>
     </div>
-    <div style="margin-bottom:20px;padding:16px;background:var(--card);border-radius:16px;border:1px solid var(--border)">
-      <p style="font-size:14px;color:var(--text-muted);margin-bottom:12px">Who has checked their role?</p>
-      <div style="display:flex;gap:8px;flex-wrap:wrap" id="playerBadges"></div>
-    </div>
     <div id="grid" class="grid"></div>
     <div style="margin-top:20px;display:flex;gap:12px;justify-content:center;flex-wrap:wrap">
       <button id="revealBtn" style="display:none">Reveal Answer</button>
@@ -727,6 +723,8 @@ professions:[
   ["Arborist","tree"],["Beekeeper","suit"],["Rancher","cowboy"],
   ["Veterinary Technician","clinic"],["Zookeeper","animals"],["Marine Biologist","ocean"],
   ["Paleontologist","fossils"],["Archaeologist","dig"],["Anthropologist","culture"]
+]
+};"],["Dinner Theater","actors"],["Improv Show","suggestion"]
 ],
 professions:[
   ["Doctor","residency"],["Nurse","rounds"],["Teacher","curriculum"],
